--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     </main>
     <footer>
         <li><a href="mailto:tolojugba@hotmail.co.uk">email</a></li>
-        <li><a href="twitter.com/adoniah3" alt="twitter logo">twitter</a></li>
-        <li><a href="linkedin.com/in/adoniah1" alt="linkedin">linkedin</a></li>
-        <li><a href="github.com/adn1ah" alt="github">github</a></li>
+        <li><a href="https://twitter.com/adoniah3" alt="twitter logo">twitter</a></li>
+        <li><a href="https://linkedin.com/in/adoniah1" alt="linkedin">linkedin</a></li>
+        <li><a href="https://github.com/adn1ah" alt="github">github</a></li>
     </footer>
 </body>
 
